# TME290-Autonomous-Robots

./: README.md  docker-compose.yml
assignment1/Assignment1_Erik_Norlin/: source_code.txt
assignment1/src/assignment_1a/: CMakeLists.txt  Dockerfile  helloworld.cpp  prime-checker.cpp  prime-checker.hpp
assignment1/src/assignment_1b/: docker-compose.yml
assignment1/src/assignment_1b/opendlv-logic-norliner/: .gitlab-ci.yml  CMakeLists.txt  Dockerfile  groundspeed.cpp  messages.odvd
assignment2/Assignment2_Erik_Norlin/: CID-111-recording-2023-04-27_141455.rec  simulation-map.txt
assignment2/Assignment2_Erik_Norlin/opendlv-assignment-2/: simulate-kiwi-b.yml  simulate-kiwi-c.yml  simulation-map.txt
assignment2/Assignment2_Erik_Norlin/opendlv-assignment-2/opendlv-logic-test-kiwi-b/src/: behavior.cpp  behavior.hpp  opendlv-logic-test-kiwi.cpp
assignment2/Assignment2_Erik_Norlin/opendlv-assignment-2/opendlv-logic-test-kiwi-c/src/: behavior.cpp  (+2 more)
assignment2/Assignment2_Erik_Norlin/opendlv-assignment-2/opendlv-virtual-motor-kiwi/: CMakeLists.txt
assignment2/Assignment2_Erik_Norlin/opendlv-assignment-2/opendlv-virtual-space/: CMakeLists.txt  Dockerfile
assignment3/Assignment3_Erik_Norlin/python_kinematic/plot/: plot.ipynb
assignment3/Assignment3_Erik_Norlin/python_kinematic/src/: behavior.py  estimate.py  main.py  predict.py  update.py
assignment4/: .gitlab-ci.yml  Dockerfile  dockers.txt
assignment4/plot/: plot.ipynb  status.csv
assignment4/src/: tme290-lawnmower.cpp
baby-steps/src/: CMakeLists.txt  helloworld.cpp  messages.odvd  test-prime-checker.cpp
(+17 files in other folders)
